--- a/public/css/style.css
+++ b/public/css/style.css
@@ -194,13 +194,13 @@
   margin: 3px 5px 3px 5px;
 }
 
-:deep() {
+/* :deep() {
   border: 2px solid darkgrey;
   border-radius: 5px;
   height: 100%;
   overflow-y: auto;
   padding-right: 15px;
-}
+} */
 
 :deep() .valid {
   border: 2px solid green;
